--- a/apps/docs/react/getting-started/setup.mdx
+++ b/apps/docs/react/getting-started/setup.mdx
@@ -35,6 +35,12 @@ npx papi add dot -n polkadot
 npx papi
 ```
 
+:::tip
+
+It's a really good idea to add `papi` to the "postinstall" script in package.json to automate generating the types after installation.
+
+:::
+
 :::info
 
 For more information on metadata syncing and type generation, please refer to this [documentation](https://papi.how/codegen) provided by [Polkadot-API](https://papi.how/).
