--- a/apps/docs/react/getting-started/setup.mdx
+++ b/apps/docs/react/getting-started/setup.mdx
@@ -19,7 +19,7 @@ This walks you through the process of creating a simple ReactiveDOT application.
 First add ReactiveDOT, along with required packages as dependencies to your React project.
 
 ```bash npm2yarn
-npm install @reactive-dot/react polkadot-api
+npm install @reactive-dot/core @reactive-dot/react polkadot-api
 ```
 
 ## Download & sync metadata
