docs: add `@reactive-dot/core` to setup script

--- a/apps/docs/vue/getting-started/setup.mdx
+++ b/apps/docs/vue/getting-started/setup.mdx
@@ -19,7 +19,7 @@ This walks you through the process of creating a simple ReactiveDOT application.
 First add ReactiveDOT, along with required packages as dependencies to your Vue project.
 
 ```bash npm2yarn
-npm install @reactive-dot/vue polkadot-api
+npm install @reactive-dot/core @reactive-dot/vue polkadot-api
 ```
 
 ## Download & sync metadata
